# c3hm

./: .gitignore  README.md  guide-demarrage.md  noxfile.py  pyproject.toml
_notest_commands/: test_feedback.py  test_gradebook.py  test_statement.py  test_template.py
docs/: tutorial.md  étudiants.csv
gabarits_grilles/: README.md  grille_5_niveau.yaml  grille_5_niveaux.xlsx  grille_5_niveaux.yaml
src/c3hm/: cli.py  utils.py
src/c3hm/assets/templates/config/: config_5_levels.yaml  grille.yaml  grille_minimal.yaml
src/c3hm/assets/templates/word/: rubric-default.docx
src/c3hm/cli/: __init__.py  clean.py  cli.py  export.py  feedback.py  gradebook.py  rubric.py  template.py  unpack.py
src/c3hm/click/: clean.py  feedback.py  gradebook.py  statement.py  template.py
src/c3hm/commands/: clean.py  export.py  feedback.py  generate_excel.py  generate_rubric.py  generate_word.py  gradebook.py  init.py  rubric.py  statement.py  student.py  template.py  unpack.py
src/c3hm/commands/export/: export.py  export_word.py  generate_rubric.py
src/c3hm/commands/rubric/: rubric.py  rubric_word.py
src/c3hm/core/: clean.py  rubric.py  utils.py
src/c3hm/core/generate/: generate_excel.py  generate_word.py
src/c3hm/core/word/: generate.py
src/c3hm/data/: config.py  config_parser.py  criterion.py  evaluation.py  format.py  grade_level.py  gradedrubric.py  gradesheet.py  indicator.py  rubric.py  student.py  studentgrade.py
src/c3hm/data/config/: config.py  config_parser.py  criterion.py  evaluation.py  format.py  grade_level.py  indicator.py
src/c3hm/data/evaluation/: criterion.py  evaluation.py  indicator.py
src/c3hm/data/gradesheet/: gradesheet.py  gradesheet_parser.py  gradesheet_stat.py
src/c3hm/data/rubric/: descriptors.py  format.py  grade_level.py  grade_levels.py  rubric.py
src/c3hm/data/student/: student.py  students.py
src/c3hm/data/user_config/: config.py  config_parser.py  criterion.py  evaluation.py  indicator.py
src/c3hm/models/: generate_rubric.py
src/c3hm/typer/: clean.py  feedback.py  gradebook.py  rubric.py  statement.py  student.py  template.py
src/c3hm/utils/: excel.py  omnivox.py  word.py
tests/: conftest.py  test_clean.py  test_omnivox.py  test_rubric.py  test_utils.py
tests/fixtures/: checklist.yaml  config_1.yaml  gradebook_1.xlsx  grille.xlsx  grille.yaml  grille_5_niveaux.xlsx  grille_bug_1.yaml  grille_gradebook.xlsx  grille_inference.xlsx  grille_zero.xlsx  liste_etudiants.csv  liste_etudiants.xlsx  rubric_1.yaml  rubric_minimal.yaml
tests/test_cli/: test_cli.py
tests/test_commands/: export.py  test_clean.py  test_export.py  test_feedback.py  test_generate_excel.py  test_generate_word.py  test_gradebook.py  test_init.py  test_omnivox.py  test_statement.py  test_student.py  test_unpack.py
tests/test_data/: test_config.py  test_criterion.py  test_grade.py  test_grade_level.py  test_indicator.py  test_rubric.py  test_student.py
tests/test_data/test_evaluation/: test_criterion.py  test_evaluation.py  test_indicator.py
tests/test_data/test_rubric/: test_descriptors.py  test_format.py  test_grade_level.py  test_grade_levels.py  test_rubic.py
tests/test_data/test_student/: test_student.py  test_students.py
tests/test_generate/: nope_test_generate_excel.py  test_generate_excel.py  test_generate_word.py
tests/test_utils/: test_decimal.py  test_omnivox.py
tests/word/: test_generate.py
